--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <h1>Full House</h1>  
         <p>manual deployment vs web automation</p>
+	   <p>open AI</p>
     </main>
 	<script src="index.js"></script>
   </body>
