--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <img src="img_la.jpg" alt="LA" style="width:100%">
 
 <div class="w3-container w3-black">
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
+<h1>Main Page ~ Bahaa Web</h1>
+<p>this is a an open source, access free website.</p>
+<p>Created by the elite sosciety members....</p>
 </div>
 
 </body>
