--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="img_la.jpg" alt="LA" style="width:100%">
+<img src="C:\Users\User\Desktop" alt="LA" style="width:100%">
 
 <div class="w3-container w3-black">
 <h1>Main Page ~ Bahaa Web</h1>
