--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="C:\Users\User\Desktop" alt="C:\Users\User\Desktop" style="width:100%">
+<img src="https://www.NBA.com/image2.jpg" alt="https://www.basketball.com/image2.jpg" style="width:100%">
 
 <div class="w3-container w3-black">
 <h1>Main Page ~ Bahaa Web</h1>
