--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Championship2024</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="https://www.NBA.com/image2.jpg" alt="https://www.basketball.com/image2.jpg" style="width:100%">
+<img src="https://www.vecteezy.com/free-photos/basketball" alt="https://www.vecteezy.com/free-photos/basketball" style="width:100%">
 
 <div class="w3-container w3-black">
 <h1>Main Page ~ Bahaa Web</h1>
