--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="C:\Users\User\Desktop\lrm1ehuepxxgjntqr1hx.webp" style="width:100%">
+<img src="https://github.com/Bahaa642/Quiz-2/blob/main/lrm1ehuepxxgjntqr1hx.webp">
 
 <div class="w3-container w3-black">
 <h1>Main Page ~ Bahaa Web</h1>
